--- a/yubiauth/client/templates/base.html
+++ b/yubiauth/client/templates/base.html
@@ -10,6 +10,7 @@
 	<title>{% block title %}YubiAuth{% endblock %}</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
+	<link rel="icon" type="image/png" href="../static/favicon.ico" />
 
 	{% block styles %}
 	<link rel="stylesheet" href="../static/css/bootstrap.min.css">
