Imported Upstream version 0.3.3

--- a/yubiauth/client/templates/logged_in.html
+++ b/yubiauth/client/templates/logged_in.html
@@ -9,7 +9,7 @@
 		<span class="brand">YubiAuth</span>
 
 		<ul class="nav">
-			<li><a href="status">Settings</a></li>
+			<li><a href="manage">Settings</a></li>
 		</ul>
 
 		<ul class="nav pull-right">
