Imported Upstream version 0.3.10

--- a/yubiauth/client/templates/base.html
+++ b/yubiauth/client/templates/base.html
@@ -30,9 +30,7 @@
 	{% endblock %}
 
 	{% block scripts %}
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="../static/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
-
+        <script src="../static/js/vendor/jquery-1.9.1.min.js"></script>
         <script src="../static/js/vendor/bootstrap.min.js"></script>
 
 	<script src="../static/js/main.js"></script>
